fix sliding side menu on mobile - height too low

--- a/src/components/styles/FeedbackUnit.module.css
+++ b/src/components/styles/FeedbackUnit.module.css
@@ -35,4 +35,8 @@
   .feedbackUnit:first-child {
     margin-top: 3.2rem;
   }
+
+  .feedbackUnit:last-child {
+    margin-bottom: 20rem;
+  }
 }
